# GoblinOS

./: .env.enc  .env.example  .eslintrc.cjs  .gitignore  .jscpd.json  API_KEYS_MANAGEMENT.md  API_KEYS_STATUS.md  GOBLIN_CLI_USAGE.md  Goblinfile.yaml  HUB_INTEGRATION_TRACKER.md  ONBOARDING.md  README.md  SOURCE_OF_TRUTH.md  api_keys_setup.sh.example  forgetm.db  goblin-cli.sh  goblins.schema.json  goblins.yaml  integration-test-results.json  node_modules.link.bak  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  secrets.enc.yaml  setup_api_keys.sh  test-api-keys.sh  tsconfig.base.json  tsconfig.build.json  vitest.config.ts
.changeset/: README.md
.githooks/: pre-commit
.github/workflows/: packages-tests.yml  tool-layer-test.yml
.runs/: 1762692457885-forge-lite-dev-zjbaco.json  1762692682484-hello-cq4b4r.json
desktop/: COMPLETION_REPORT.md  INTEGRATION_SUMMARY.md  PHASE1_COMPLETE.md  README.md  package.json
desktop/e2e/: playwright.config.ts
desktop/src/: App.css  App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  commands_old.rs  config.rs  cost_tracker.rs  goblin_runtime.rs  ipc.rs  lib.rs  main.rs  memory.rs  orchestration.rs  providers_old.rs
desktop/src-tauri/src/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
desktop/src-tauri/tests/: headless_stream_smoke.rs  mock_provider.rs  provider_model_stream_e2e.rs  smoke.rs
docs/: INGESTION_PACKAGE_IMPLEMENTATION.md  KPI.md  OFFICIAL_PACKAGE_RULE_FOR_DATA.md  PROMPTS.md  ROLES.md  ROUTING.md  TESTING.md  TOOL_SELECTION.md
docs/biome/: README.md
docs/observability/: unified-telemetry-plan.md
examples/: deepseek-connection-test.js  intent-runner.js  ollama-connection-test.js  tool-selection-demo.js  toolbelt-runner.js
scripts/: generate-roles.js  install-git-hooks.sh  validate-deepseek-env.js  validate-kpi-drift.js  validate-ollama-env.js  validate-tools-owned.js
tools/: portfolio_env.sh
tools/goblin-cli/: README.md  index.js  integration-tests.js  package-lock.json  package.json  test-goblin-loader.js  validate-system.js  validate.js
tools/telemetry/: .gitignore  README.md  audit_query_api.py  audit_retention.py  collector-config.yaml  docker-compose.yml  integration_test.sh  run_poc.sh  (+4 more)
types/: ollama.d.ts  shims.d.ts
(+45 files in other folders)
