[package]
name = "goblinos-desktop"
version = "1.0.0"
description = "GoblinOS - AI Development Automation Hub"
authors = ["ForgeMonorepo"]
edition = "2021"
license = "MIT"
repository = "https://github.com/ForgeMonorepo"
homepage = "https://github.com/ForgeMonorepo"
keywords = ["tauri", "desktop", "automation", "ai"]
categories = ["development-tools", "gui"]
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "goblinos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = [] }
tauri-plugin-opener = { version = "2.5.0", optional = true }
tauri-plugin-shell = { version = "2.3.3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.42", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
uuid = { version = "1.11", features = ["v4"] }
serde_yaml = "0.9"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
futures-util = "0.3"
regex = "1.10"

[features]
# Default features keep surface minimal; shell available by default for task execution utilities.
default = ["shell"]
shell = ["dep:tauri-plugin-shell"]
opener = ["dep:tauri-plugin-opener"]
# offline feature placeholder (enable when using sqlx offline prepare migrations)
offline = []

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
opt-level = "z" # size optimized; switch to 's' or '3' if performance critical

[profile.dev]
incremental = true
debug = true

# sqlx metadata (optional offline compile preparation)
[package.metadata.sqlx]
# Set to true and run `cargo sqlx prepare -- --lib` to generate .sqlx data for offline builds
offline = false

